--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "jbig2enc"]
 	path = jbig2enc
 	url = https://github.com/agl/jbig2enc
+[submodule "jbig2enc_poc/jbig2enc"]
+	path = jbig2enc_poc/jbig2enc
+	url = https://github.com/agl/jbig2enc
